--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   },
   "homepage": "https://github.com/krskv/vida-admin#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-solid-svg-icons": "^5.4.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@zeit/next-sass": "^1.0.1",
     "next": "^7.0.1",
+    "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
