--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^7.0.1",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "redux": "^4.0.0"
   }
 }
